<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/detail_photo"
        tools:src="@tools:sample/photos"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_name"
        android:layout_marginTop="30dp"
        android:layout_below="@id/detail_photo"
        android:text="@string/name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_username"
        android:layout_below="@id/detail_name"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:text="@string/username"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_repository"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@id/detail_followers"
        android:text="@string/repository"
        android:layout_alignBaseline="@id/detail_followers"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_followers"
        android:layout_below="@id/detail_username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/followers"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_following"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/detail_followers"
        android:text="@string/following"
        android:layout_alignBaseline="@id/detail_followers"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/detail_location"
        android:layout_marginTop="10dp"
        android:text="@string/location"
        android:layout_below="@id/detail_followers"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>